--- a/NapkinStudio/src/main/webapp/static/css/app.css
+++ b/NapkinStudio/src/main/webapp/static/css/app.css
@@ -144,9 +144,7 @@ body, #mainWrapper, .form-control{
 .add-comment-btn:hover {
 	background-image: url("../image/img__Add comment_hover.png");
 }
-.add-file-input {
-	background-image: url("../image/img__Add comment_hover.png");
-}
+
 .btn-primary {
 	background-color: #29abe2;
 	border: none;
@@ -162,6 +160,17 @@ body, #mainWrapper, .form-control{
 .btn-success:hover {
     background-color: #337ab7!important;
     border: none!important;
+}
+
+.btn-custom {
+	color: #e5e5e5;
+}
+.btn-custom:hover {
+	color: #29abe2;
+	cursor: pointer;
+}
+.btn-custom:active {
+	color: #2989e2;
 }
 
 .table-title {
@@ -578,16 +587,10 @@ remove-attachment:hover {
 	color: #8cd5ff;
 }
 .drag-n-drop-zone {
-	/*background-color: silver;*/
+	background-color: silver;
 /* 	width: 200px; */
 /* 	min-height: 90px; */
 }
-/*.drag-n-drop-zone:hover {*/
-	/*background-color: #d0cece;*/
-	/*border-style: dotted;*/
-	/*border-width: 2px;*/
-	/*border-color: silver;*/
-/*}*/
 .progress-bar {
 	height: 2px !important;
 }
@@ -680,29 +683,124 @@ remove-attachment:hover {
     }
 }
 
-/*for filter-bar*/
-.status-filter-bar{
-	padding-left: 15px;
-	overflow: hidden;
-	display: block;
-	/*float: left;*/
+/*Loading spinner*/
+/ Absolute Center Spinner /
+.loading-spinner {
+    position: fixed;
+    z-index: 999;
+    height: 2em;
+    width: 2em;
+    overflow: show;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
 }
 
-.status-filter-bar li{
-	list-style-type: none;
-	display: block;
-	/*height: auto;*/
+/ Transparent Overlay /
+.loading-spinner:before {
+    content: '';
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.3);
 }
 
-.status-filter-bar li a{
-	display: block;
+/ :not(:required) hides these rules from IE9 and below /
+.loading-spinner:not(:required) {
+    / hide "loading..." text /
+    font: 0/0 a;
+    color: transparent;
+    text-shadow: none;
+    background-color: transparent;
+    border: 0;
 }
 
-.commentText{
-	font-weight: bold;
-	padding-top: 15px;
-	border-top: solid;
-	border-top-width: 0px;
-	border-top-color: silver;
-
+.loading-spinner:not(:required):after {
+    content: '';
+    display: block;
+    font-size: 17px;
+    width: 2em;
+    height: 2em;
+    margin-top: -1em;
+    -webkit-animation: spinner 2500ms infinite linear;
+    -moz-animation: spinner 2500ms infinite linear;
+    -ms-animation: spinner 2500ms infinite linear;
+    -o-animation: spinner 2500ms infinite linear;
+    animation: spinner 2500ms infinite linear;
+    border-radius: 1em;
+    /*-webkit-box-shadow: rgba(41, 171, 226, 0.75) 1.5em 0 0 0, rgba(41, 171, 226, 0.75) 1.1em 1.1em 0 0, rgba(41, 171, 226, 0.75) 0 1.5em 0 0, rgba(41, 171, 226, 0.75) -1.1em 1.1em 0 0, rgba(41, 171, 226, 0.5) -1.5em 0 0 0, rgba(41, 171, 226, 0.5) -1.1em -1.1em 0 0, rgba(41, 171, 226, 0.75) 0 -1.5em 0 0, rgba(41, 171, 226, 0.75) 1.1em -1.1em 0 0;*/
+    /*box-shadow: rgba(41, 171, 226, 0.75) 1.5em 0 0 0, rgba(41, 171, 226, 0.75) 1.1em 1.1em 0 0, rgba(41, 171, 226, 0.75) 0 1.5em 0 0, rgba(41, 171, 226, 0.75) -1.1em 1.1em 0 0, rgba(41, 171, 226, 0.75) -1.5em 0 0 0, rgba(41, 171, 226, 0.75) -1.1em -1.1em 0 0, rgba(41, 171, 226, 0.75) 0 -1.5em 0 0, rgba(41, 171, 226, 0.75) 1.1em -1.1em 0 0;*/
+    -webkit-box-shadow: rgba(41, 171, 226, 0.75) 3em 0 0 0, rgba(41, 171, 226, 0.75) 2.2em 2.2em 0 0, rgba(41, 171, 226, 0.75) 0 3em 0 0, rgba(41, 171, 226, 0.75) -2.2em 2.2em 0 0, rgba(41, 171, 226, 0.5) -3em 0 0 0, rgba(41, 171, 226, 0.5) -2.2em -2.2em 0 0, rgba(41, 171, 226, 0.75) 0 -3em 0 0, rgba(41, 171, 226, 0.75) 2.2em -2.2em 0 0;
+    box-shadow: rgba(41, 171, 226, 0.75) 3em 0 0 0, rgba(41, 171, 226, 0.75) 2.2em 2.2em 0 0, rgba(41, 171, 226, 0.75) 0 3em 0 0, rgba(41, 171, 226, 0.75) -2.2em 2.2em 0 0, rgba(41, 171, 226, 0.75) -3em 0 0 0, rgba(41, 171, 226, 0.75) -2.2em -2.2em 0 0, rgba(41, 171, 226, 0.75) 0 -3em 0 0, rgba(41, 171, 226, 0.75) 2.2em -2.2em 0 0;
 }
+
+/ Animation /
+
+@-webkit-keyframes spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@-moz-keyframes spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@-o-keyframes spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+}
+@keyframes spinner {
+    0% {
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
