arrows  and  order filters and mail with logo finished

--- a/NapkinStudio/src/main/webapp/static/themes/blue/style.css
+++ b/NapkinStudio/src/main/webapp/static/themes/blue/style.css
@@ -24,6 +24,7 @@ table.tablesorter tbody td {
 	padding: 4px;
 	background-color: #FFF;
 	vertical-align: top;
+	cursor: pointer;
 }
 table.tablesorter tbody tr.odd td {
 	background-color:#F0F0F6;
