--- a/NapkinStudio/src/main/webapp/static/css/app.css
+++ b/NapkinStudio/src/main/webapp/static/css/app.css
@@ -890,4 +890,11 @@ remove-attachment:hover {
 	width: 10%;
 
 }
+.edit-comment-area {
+	border-radius: 5px;
+	resize: none;
+	margin-bottom: 10px;
+    width: 325px;
+    height: 100px;
+}
 
