--- a/NapkinStudio/src/main/webapp/static/css/app.css
+++ b/NapkinStudio/src/main/webapp/static/css/app.css
@@ -210,6 +210,7 @@ body, #mainWrapper, .form-control{
 	color: #b4b4b4;
     display: inline;
     font-size: 0.9em;
+    overflow: hidden;
 }
 .order-attachment .remove-attachment {
 	display: none;
